fix few things
